--- a/src/shared/assets/lang/en-us.json
+++ b/src/shared/assets/lang/en-us.json
@@ -4,7 +4,7 @@
   "ui.prompt.locked": "Locked",
   "ui.prompt.unlock": "Unlock",
   "ui.prompt.disguise": "Disguise",
-  "ui.prompt.already_disguised": "You're already disguised",
+  "ui.prompt.already_disguised": "You're already wearing this disguise",
   "ui.prompt.ammo_full": "Your ammo is full",
   "ui.prompt.has_fbb": "You already have an FB Beryl",
   "ui.prompt.inventory_no_fbb": "You don't have an FB Beryl",
