feat(prompt)!: add visible, disabled, and subtitle to prompt builder

--- a/src/shared/assets/lang/en-us.json
+++ b/src/shared/assets/lang/en-us.json
@@ -5,6 +5,8 @@
   "ui.prompt.unlock": "Unlock",
   "ui.prompt.disguise": "Disguise",
   "ui.prompt.already_disguised": "You're already wearing this disguise",
+  "ui.prompt.cant_interact": "You can't interact with this prompt",
+  "ui.prompt.prompt": "Prompt",
   "ui.prompt.ammo_full": "Your ammo is full",
   "ui.prompt.has_fbb": "You already have an FB Beryl",
   "ui.prompt.inventory_no_fbb": "You don't have an FB Beryl",
