--- a/src/shared/assets/lang/en-us.json
+++ b/src/shared/assets/lang/en-us.json
@@ -4,8 +4,15 @@
   "ui.prompt.locked": "Locked",
   "ui.prompt.unlock": "Unlock",
   "ui.prompt.disguise": "Disguise",
+  "ui.prompt.hack": "Hack",
+  "ui.prompt.hacked": "Hacked",
   "ui.prompt.already_disguised": "You're already wearing this disguise",
   "ui.prompt.cant_interact": "You can't interact with this prompt",
+  "ui.prompt.cant_request_elev": "Cannot request elevator",
+  "ui.prompt.systems_locked": "Systems are locked down",
+  "ui.prompt.system_lock_lifted": "Systems lockdown lifted",
+  "ui.prompt.system_open": "Systems lockdown disabled",
+  "ui.prompt.lift_system_lock": "Lift systems lockdown",
   "ui.prompt.prompt": "Prompt",
   "ui.prompt.ammo_full": "Your ammo is full",
   "ui.prompt.has_fbb": "You already have an FB Beryl",
@@ -29,5 +36,7 @@
   "ui.status.suspicious_criminal": "Suspicious",
   "ui.status.armed": "Armed",
   "ui.status.dangerous_item": "Dangerous Item",
-  "object.generic.elevator": "Elevator"
+  "object.generic.elevator": "Elevator",
+  "object.generic.elevators": "Elevators",
+  "object.generic.security_laptop": "Security Laptop"
 }
