feat: add more localized strings

--- a/src/shared/assets/lang/en-us.json
+++ b/src/shared/assets/lang/en-us.json
@@ -37,6 +37,9 @@
   "ui.status.suspicious_criminal": "Suspicious",
   "ui.status.armed": "Armed",
   "ui.status.dangerous_item": "Dangerous Item",
+  "ui.prompt.replenish": "Replenish",
+  "ui.prompt.ammunition": "Ammunition",
+  "ui.prompt.dont_have_gun": "You don't have a gun for this ammunition",
   "object.generic.elevator": "Elevator",
   "object.generic.elevators": "Elevators",
   "object.generic.security_laptop": "Security Laptop",
