feat(takedown)!: add takedown

--- a/src/shared/assets/lang/en-us.json
+++ b/src/shared/assets/lang/en-us.json
@@ -21,6 +21,7 @@
   "ui.prompt.call": "Call",
   "ui.prompt.interact": "Interact",
   "ui.prompt.missing_tool_prefix": "Missing",
+  "ui.prompt.subdue": "Subdue",
   "ui.objectives.stealth": "Stealth",
   "ui.objectives.mission": "Mission",
   "ui.objectives.loud": "Loud",
