feat(body carrying)!: add body carrying

--- a/src/shared/assets/lang/en-us.json
+++ b/src/shared/assets/lang/en-us.json
@@ -22,6 +22,7 @@
   "ui.prompt.interact": "Interact",
   "ui.prompt.missing_tool_prefix": "Missing",
   "ui.prompt.subdue": "Subdue",
+  "ui.prompt.carry": "Carry",
   "ui.objectives.stealth": "Stealth",
   "ui.objectives.mission": "Mission",
   "ui.objectives.loud": "Loud",
